// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@/compontent/events/as-fieldset.vue Renders a fieldset with an existing event 1`] = `
<fieldset
  class="event"
>
  <ol
    hidden="hidden"
    itemprop="events"
  >
    <li
      itemid="1580544000000"
      itemscope="itemscope"
      itemtype="/events"
    >
      <link
        href="/+16282281824/posters/559666932867"
        itemprop="url"
        rel="icon"
      />
    </li>
  </ol>
   
  <label
    for="day"
  >
    Saturday, February 1
  </label>
   
  <input
    id="day"
    required="required"
    type="date"
  />
   
  <input
    required="required"
    type="time"
  />
   
  <menu>
    <a>
      <!---->
    </a>
     
    <a>
      <!---->
    </a>
  </menu>
</fieldset>
`;

exports[`@/compontent/events/as-fieldset.vue Renders a fieldset with the default event 1`] = `
<fieldset
  class="event"
>
  <ol
    hidden="hidden"
    itemprop="events"
  />
   
  <label
    for="day"
  >
    Friday, April 10
  </label>
   
  <input
    id="day"
    required="required"
    type="date"
  />
   
  <input
    required="required"
    type="time"
  />
   
  <menu>
    <a>
      <!---->
    </a>
     
    <a>
      <!---->
    </a>
  </menu>
</fieldset>
`;
